ci: enable sample failed step in build workflow
Enable the previously commented-out step to simulate a failed step in the build workflow. This change is made to test the workflow's behavior when a step fails, ensuring that the post cleanup step runs correctly in all scenarios.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Run Custom Action
         uses: ./.github/actions/my-action
 
-      # - name: Sample failed step
-      #   run: exit 1
+      - name: Sample failed step
+        run: exit 1
 
       - name: Run post cleanup
         if: always()
