--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Run Custom Action
         uses: ./.github/actions/my-action
 
-      - name: Sample failed step
-        run: exit 1
+      # - name: Sample failed step
+      #   run: exit 1
 
       - name: Run post cleanup
         if: always()
-        shell: bash
-        run: |
-          bash "${POST_SCRIPT}" "${{ job.status }}"
+        uses: ./.github/actions/my-action
+        with:
+          mode: cleanup
