ci(my-action): add step status logging to action.yml
Add a new step to log the status of the current step in the GitHub action. This provides better visibility into the execution flow and helps with debugging during CI/CD processes.

--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -20,6 +20,11 @@ runs:
           echo "JOB DETAILS FROM ACTION.YML----------------------"
           echo "${{ toJson(github) }}"
           echo "--------------------------------------------------"
+
+          echo "PRINT STEP STATUS FROM ACTION.YML----------------------"
+          cat "${{ github.step_summary }}"
+          echo "--------------------------------------------------"
+
           bash "${{ github.action_path }}/post.sh"
         else
           bash "${{ github.action_path }}/main.sh"
