--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -22,7 +22,7 @@ runs:
           echo "--------------------------------------------------"
 
           echo "PRINT STEP STATUS FROM ACTION.YML----------------------"
-          cat "${{ github.step_summary }}"
+          cat ${{ github.step_summary }}
           echo "--------------------------------------------------"
 
           bash "${{ github.action_path }}/post.sh"
