refactor: comment out unused job status extraction in GitHub action
The job status extraction logic was commented out as it is currently unused and the raw response is being logged instead for debugging purposes.

--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -26,8 +26,8 @@ runs:
             "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs")
           
           # Find the job with matching name and extract its status
-          JOB_STATUS=$(echo $RESPONSE | jq -r ".jobs[] | select(.name == \"$JOB_NAME\") | .conclusion")
-          echo "Job status: $JOB_STATUS"
+          # JOB_STATUS=$(echo $RESPONSE | jq -r ".jobs[] | select(.name == \"$JOB_NAME\") | .conclusion")
+          echo "Job status: $RESPONSE"
           
           echo "--------------------------------------------------"
 
