ci(action.yml): add sleep to allow job details to stabilize
Introduce a 10-second sleep in the cleanup mode to ensure job details are fully available before fetching the job status. This prevents potential race conditions where the job status might not be ready immediately.

--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -18,6 +18,9 @@ runs:
       run: |        
         if [ "${{ inputs.mode }}" = "cleanup" ]; then
           echo "JOB DETAILS FROM ACTION.YML----------------------"
+
+          sleep 10
+          
           echo "Current job name: ${{ github.job }}"
           
           # Use GitHub API to fetch job status
