--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -21,7 +21,7 @@ runs:
 
           sleep 10
           
-          echo "Current job name: ${{ github.job }}"
+          echo "Current job name: ${{ input.job_status }}"
           
           # Use GitHub API to fetch job status
           JOB_NAME="${{ github.job }}"
