--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -9,6 +9,9 @@ inputs:
     description: "Job"
     required: false
     default: 'unknown'
+  gh_token:
+    description: "Github token"
+    required: true
 
 runs:
   using: "composite"
