--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Run Custom Action
         uses: ./.github/actions/my-action
+        with:
+          gh_token: ${{secrets.GITHUB_TOKEN}}
 
       - name: Sample failed step
         run: exit 1
@@ -25,3 +27,4 @@ jobs:
         with:
           mode: cleanup
           job_status: ${{job.status}}
+          gh_token: ${{secrets.GITHUB_TOKEN}}
