--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -9,9 +9,11 @@ inputs:
     description: "Job"
     required: false
     default: 'unknown'
-  gh_token:
-    description: "Github token"
-    required: true
+  github_token:
+    description: 'GitHub token to be passed to the PSE container for GitHub authentication'
+    required: false
+    default: ${{ github.token }}
+
 
 runs:
   using: "composite"
@@ -20,3 +22,5 @@ runs:
       shell: bash
       run: |        
           bash "${{ github.action_path }}/post.sh"
+      env:
+        GITHUB_TOKEN: ${{ inputs.github_token || github.token }}
