--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -21,6 +21,7 @@ runs:
     - name: Run main logic
       shell: bash
       run: |        
-          bash "${{ github.action_path }}/post.sh"
+          bash "${{ github.action_path }}/get_job_status.sh"
       env:
         GITHUB_TOKEN: ${{ inputs.github_token || github.token }}
+        JOB_ID: ${{github.job_id}}
