--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -20,8 +20,13 @@ runs:
   steps:
     - name: Run main logic
       shell: bash
-      run: |        
+      run: |
+        if [ "${{ inputs.mode }}" = "cleanup" ]; then
+          echo "JOB DETAILS FROM ACTION.YML----------------------"
           bash "${{ github.action_path }}/get_job_status.sh"
+        else
+          bash main.sh
+        fi
       env:
         GITHUB_TOKEN: ${{ inputs.github_token || github.token }}
         JOB_ID: ${{github.job}}
