--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
   get_logs:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Run post cleanup
         if: always()
         uses: ./.github/actions/my-action
