--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
       #   run: exit 1
   get_logs:
     runs-on: ubuntu-latest
+    needs: pse
     steps:
       - uses: actions/checkout@v3
       - name: Run post cleanup
