--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,23 @@ jobs:
 
       # - name: Sample failed step
       #   run: exit 1
+      - name: Get Job ID from GH API
+        id: get-job-id
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          jobs=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id}}/attempts/${{ github.run_attempt }}/jobs)
+          job_id=$(echo $jobs | jq -r '.jobs[] | select(.runner_name=="${{ runner.name }}") | .id')
+          echo "job_id=$job_id" >> $GITHUB_OUTPUT
+
+      - name: Display Job ID
+        run: |
+            echo Job ID: ${{ steps.get-job-id.outputs.job_id }}
+            echo My full job URL is ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ steps.get-job-id.outputs.job_id }}
+    
   get_logs:
     runs-on: ubuntu-latest
-    # needs: pse
+    needs: pse
     steps:
       - uses: actions/checkout@v3
       - name: Run post cleanup
