--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: 
+  workflow_dispatch:
 
 jobs:
   pse:
     runs-on: ubuntu-latest
+    outputs:
+      pse_job_id: ${{ steps.get-job-id.outputs.job_id }} # Declare pse_job_id as an output of this job
 
     steps:
       - uses: actions/checkout@v3
@@ -33,10 +35,10 @@ jobs:
         run: |
             echo Job ID: ${{ steps.get-job-id.outputs.job_id }}
             echo My full job URL is ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ steps.get-job-id.outputs.job_id }}
-    
+
   get_logs:
     runs-on: ubuntu-latest
-    needs: pse
+    needs: pse # Ensure get_logs depends on pse
     steps:
       - uses: actions/checkout@v3
       - name: Run post cleanup
@@ -45,3 +47,5 @@ jobs:
         with:
           mode: analyze
           job_status: ${{job.status}}
+          # Access the job_id from the 'pse' job's outputs
+          pse_logs: ${{ needs.pse.outputs.pse_job_id }}
