--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
   pse:
     runs-on: ubuntu-latest
     outputs:
-      pse_job_id: ${{ steps.get-job-id.outputs.job_id }} # Declare pse_job_id as an output of this job
+      pse_job_id: ${{ steps.get-job-id.outputs.job_id }}  # Current job's ID
+      all_job_ids: ${{ steps.get-all-job-ids.outputs.job_ids }}  # All job IDs
 
     steps:
       - uses: actions/checkout@v3
@@ -20,32 +21,45 @@ jobs:
         with:
           gh_token: ${{secrets.GITHUB_TOKEN}}
 
-      # - name: Sample failed step
-      #   run: exit 1
-      - name: Get Job ID from GH API
+      - name: Get All Job IDs
+        id: get-all-job-ids
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Get all jobs in current run attempt
+          jobs=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id}}/attempts/${{ github.run_attempt }}/jobs)
+          # Extract all job IDs (comma-separated)
+          job_ids=$(echo "$jobs" | jq -r '.jobs[].id' | tr '\n' ',' | sed 's/,$//')
+          echo "job_ids=$job_ids" >> $GITHUB_OUTPUT
+
+      - name: Get Current Job ID
         id: get-job-id
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Get current job ID by name
           jobs=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id}}/attempts/${{ github.run_attempt }}/jobs)
-          job_id=$(echo $jobs | jq -r '.jobs[] | select(.runner_name=="${{ runner.name }}") | .id')
+          job_id=$(echo "$jobs" | jq -r ".jobs[] | select(.name == \"${{ github.job }}\") | .id")
           echo "job_id=$job_id" >> $GITHUB_OUTPUT
 
-      - name: Display Job ID
+      - name: Display Job IDs
         run: |
-            echo Job ID: ${{ steps.get-job-id.outputs.job_id }}
-            echo My full job URL is ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ steps.get-job-id.outputs.job_id }}
+          echo "Current Job ID: ${{ steps.get-job-id.outputs.job_id }}"
+          echo "All Job IDs: ${{ steps.get-all-job-ids.outputs.job_ids }}"
 
   get_logs:
     runs-on: ubuntu-latest
-    needs: pse # Ensure get_logs depends on pse
+    needs: pse
     steps:
       - uses: actions/checkout@v3
+      
       - name: Run post cleanup
         if: always()
         uses: ./.github/actions/my-action
         with:
           mode: analyze
-          job_status: ${{job.status}}
-          # Access the job_id from the 'pse' job's outputs
-          pse_logs: ${{ needs.pse.outputs.pse_job_id }}
+          job_status: ${{ job.status }}
+          # Single job ID from pse job
+          pse_job_id: ${{ needs.pse.outputs.pse_job_id }}
+          # All job IDs from the workflow
+          all_job_ids: ${{ needs.pse.outputs.all_job_ids }}
