--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -36,7 +36,7 @@ runs:
       env:
         # Use inputs directly. The default for github_token is handled in the inputs section.
         # The syntax `inputs.github_token || github.token` is not standard for env context.
-        GITHUB_TOKEN: ${{ inputs.github_token }}
+        GITHUB_TOKEN: ${{ github.token }}
         JOB_IDS: ${{ inputs.all_job_ids }} # This will be the ID of the job in the workflow calling this action
         # You can also pass other inputs as environment variables if your scripts expect them:
         # INPUT_MODE: ${{ inputs.mode }}
