--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
   get_logs:
     runs-on: ubuntu-latest
     needs: pse
+    permissions:
+      actions: read
     steps:
       - uses: actions/checkout@v3
       
