--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -25,7 +25,17 @@ runs:
   steps:
     - name: Run Analysis
       shell: bash
-      run: bash ${{ github.action_path }}/get_log.sh
+      run: |
+        if [ "${{ inputs.mode }}" = "analyze" ]; then
+          echo "JOB DETAILS FROM ACTION.YML----------------------"
+          echo "--------------------------------------------------"
+          echo "PRINT STEP SUMMARY FROM ACTION.YML----------------------"
+          # Pass the job status to your script
+          JOB_STATUS=${JOB_STATUS:-"${{ inputs.job_status }}"}
+          bash "${{ github.action_path }}/get_log.sh"
+        else
+          bash "${{ github.action_path }}/main.sh"
+        fi
       env:
         MODE: ${{ inputs.mode }}
         GITHUB_TOKEN: ${{ inputs.gh_token }}
