--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
   workflow_dispatch:
+permissions:
+  checks: write
+  contents: write
+  packages: read
+  actions: read
 
 jobs:
   pse:
